force-app/main/default/objects/AccountOwnerReps__mdt/AccountOwnerReps__mdt.object-meta.xml
<CustomObject>
    <description>Add Reps to each AccountOwnerTeam to change who is automaticaly added to account teams</description>
    <label>AccountOwnerReps</label>
    <pluralLabel>AccountOwnerReps</pluralLabel>
</CustomObject>