force-app/main/default/objects/AccountOwnerReps__mdt/fields/AccountOwnerTeam__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerTeam__c</fullName>
    <label>AccountOwnerTeam</label>
    <referenceTo>AccountOwnerTeam__mdt</referenceTo>
    <relationshipLabel>AccountOwnerReps</relationshipLabel>
    <relationshipName>AccountOwnerReps</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>