force-app/main/default/objects/AccountOwnerReps__mdt/fields/State_Channel_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Channel_Field__c</fullName>
    <description>Add the state field so that this is added to the corresponding metadata parent record based on criteria that may change</description>
    <label>State Channel Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>