force-app/main/default/objects/AccountOwnerReps__mdt/fields/TeamRole__c.field-meta.xml
<CustomField>
    <fullName>TeamRole__c</fullName>
    <label>TeamRole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RBM</fullName>
                <default>true</default>
                <label>RBM</label>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>AV Solutions</fullName>
            </value>
            <value>
                <fullName>Director/Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>